# sharpeye

./: .gitignore  LICENSE  README.md  pyproject.toml  report.csv
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dast.yml  pipeline.yml  sbom.yml  scheduled.yml  security.yml
.zap/: rules.tsv
api/: Dockerfile  main.py
api/routes/: v1.py
cli/: sharpeye_cli.py
demo/: app.py  generate_samples.py
presets/: dataset_cleaner.yaml  default.yaml  telemedicine.yaml
src/sharpeye/: __init__.py  config.py  exceptions.py  pipeline.py  preprocess.py  report.py
src/sharpeye/gates/: __init__.py  engine.py  rules.py
src/sharpeye/ingest/: __init__.py  archive.py
src/sharpeye/integrations/: __init__.py  init.py  tool_schema.py
src/sharpeye/metrics/: __init__.py  base.py  edges.py  exposure.py  frequency.py  noise.py  registry.py  sharpness.py
src/sharpeye/scoring/: __init__.py  classify.py  composite.py  normalize.py
tests/: test_api.py  test_benchmarks.py  test_cli.py  test_config_resolve.py  test_contracts.py  test_demo.py  test_gates.py  test_ingest.py  test_metrics.py  test_pipeline.py  test_scoring.py  test_smoke.py  test_tool_schema.py
tests/fixtures/: ground_truth.json
