[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharpeye"
version = "0.1.0"
description = "Eagle-eyed image quality control library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Evgeny Kvest" }]
keywords = ["image-quality", "computer-vision", "opencv", "iqc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "httpx>=0.27",
]
demo = [
    "gradio>=4.0",
]
cli = [
    "typer>=0.12",
]
all = ["sharpeye[dev,api,demo,cli]"]

[project.scripts]
sharpeye = "sharpeye_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sharpeye"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
